feat: add "Increasing Memory Size for AWS Lambda Functions" example

--- a/src/docs/5.36.x/infrastructure/basics/modify-cloud-infrastructure.mdx
+++ b/src/docs/5.36.x/infrastructure/basics/modify-cloud-infrastructure.mdx
@@ -178,6 +178,24 @@ Note that when specifying additional production environments, they should be spe
 3. **Admin** ([`apps/admin/webiny.application.ts`](https://github.com/webiny/webiny-js/blob/v5.29.0/packages/cwp-template-aws/template/common/apps/admin/webiny.application.ts))
 4. **Website** ([`apps/website/webiny.application.ts`](https://github.com/webiny/webiny-js/blob/v5.29.0/packages/cwp-template-aws/template/common/apps/website/webiny.application.ts))
 
+### Increasing Memory Size for AWS Lambda Functions
+
+Increasing the memory size for AWS Lambda functions is a common practice when dealing with performance issues. The following example shows how we can increase the memory size for the **graphql** function, which is the function responsible for serving Webiny's GraphQL API:
+
+```diff-ts apps/api/webiny.application.ts
+import { createApiApp } from "@webiny/serverless-cms-aws";
+
+export default createApiApp({
+    pulumiResourceNamePrefix: "wby-",
++   pulumi: ({ resources }) => {
++       // Set memory size to 1024 MB.
++       resources.graphql.functions.graphql.config.memorySize(1024);
++   }
+});
+```
+
+```ts apps/api/webiny.application.ts
+
 ### Modifying AWS IAM Roles
 
 The following example demonstrates how we can modify the default AWS IAM role that's assigned to the AWS Lambda function that represents your GraphQL API (the one accessed via the `https://xyz.cloudfront.net/graphql` URL).
