--- a/src/docs/shared/release-notes/5.37.5/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.5/changelog.mdx
@@ -6,14 +6,16 @@ description: See what's new in Webiny version 5.37.5.
 
 <GithubRelease version={"5.37.5"} />
 
-## Headless CMS
-
-### https://github.com/webiny/webiny-js/pull/3553
-
-✍️
-
 ## Page Builder
 
-### https://github.com/webiny/webiny-js/pull/3552
+### Addressed A Block Export/Import Issue ([#3552](https://github.com/webiny/webiny-js/pull/3552))
 
-✍️
+We've addressed an issue where importing exported page blocks would fail if a block's category was not present in the target system. 
+
+### Public Website Rerendering ([#3570](https://github.com/webiny/webiny-js/pull/3570))
+
+
+
+## Headless CMS
+
+### Clone Content Model Button Now Hidden For Users Without Required Permissions ([#3553](https://github.com/webiny/webiny-js/pull/3553))
