feat: add #3554 and #3544 PR chapters

--- a/src/docs/shared/release-notes/5.37.5/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.5/changelog.mdx
@@ -28,3 +28,15 @@ We've addressed an issue where users without the required security permissions w
 This button is now hidden for users without the required permissions.
 
 <Image src={cloneModelIcon} title={"Clone Content Model Button Now Hidden For Users Without Required Permission"} />
+
+### Fixed "Name" Column Sorting ([#3554](https://github.com/webiny/webiny-js/pull/3554))
+
+We've addressed an issue with sorting the "Name" column in the Headless CMS list view. Previously, the sorting function would not work correctly if the model definition was missing a field named "title".
+
+Now, we dynamically associate the "Name" column with the field you picked as the title for the content model, so sorting will function as expected regardless of the field name.
+
+## File Manager
+
+### Fixed Listing Issue Beyond Second Pagination ([#3544](https://github.com/webiny/webiny-js/pull/3544))
+
+We have addressed the file manager listing issue that occurred after the second pagination, which previously prevented listing more than 100 files.
