docs: added information on Cannot read property 'split' of undefined error

--- a/src/docs/5.28.x/infrastructure/pulumi-iac/iac-with-pulumi.mdx
+++ b/src/docs/5.28.x/infrastructure/pulumi-iac/iac-with-pulumi.mdx
@@ -192,3 +192,13 @@ Doing this can be useful if, for example, one, or more applications depend on th
 ### Is it possible to read stack output from another stack?
 
 It's possible to read output from another stack. This is definitely useful if one or more of your current stack's infrastructure resources are depending on one or more resources from another stack. To learn more, check out the [Reading stack output](#) article.
+
+### Getting `Cannot read property 'split' of undefined` error while running any command
+When running any command, such as `yarn webiny info`, if you are getting the following error:
+
+```
+(node:18708) UnhandledPromiseRejectionWarning: TypeError: Cannot read property 'split' of undefined
+```
+
+Please specify an environment when running the command and it should work. For example: `yarn webiny info --env dev`.
+This bug has persisted for some time, preventing the command from working as expected when using a pulumi backend other than the local one.
