feat: create 5.37.5 release notes

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -4,16 +4,46 @@ title: Webiny 5.38.0 Changelog
 description: See what's new in Webiny version 5.38.0.
 ---
 
+import flp from "./assets/flp.png";
+
 <GithubRelease version={"5.38.0"} />
 
 ## Security
 
-### ✍️ Folder Level Permissions
+### Advanced Access Control Layer (AACL) - Folder Level Permissions
+
+With this release, we're expanding Webiny's [Advanced Access Control Layer (AACL)](/docs/release-notes/5.37.0/changelog#introducing-advanced-access-control-layer-aacl-2576), by introducing a brand-new feature called **Folder Level Permissions**.
+
+<Image src={flp} alt={"Folder Level Permissions"} shadow={false} />
+
+With this feature, users are now able to define access permissions on a folder level, across the three main Webiny applications: **Headless CMS**, **File Manager**, and **Page Builder**.
+
+More specifically, users that are designated as **folder owners** can now define which users (and also teams with the [Teams](/docs/enterprise/aacl/teams) feature enabled) can access which folders and, subsequently, the content within those folders.
+
+Upon assigning a user to a folder, the folder owner can also define the level of access that the user has to the folder's content. The available access levels are:
+
+- **Viewer** - users can view content, but not modify it
+- **Editor** - users can view and modify content
+- **Owner** - users can edit and manage content permissions
+
+We believe that this feature will be especially useful for larger organizations that have a lot of content and a lot of users, and that need to have an even more granular control over who can access what content.
+
+[//]: # (To learn more, please refer to the newly added [Folder Level Permissions]&#40;/docs/key-topics/security/folder-level-permissions&#41; article.)
+
+## Page Builder
+
+### ✍️ Addressed Block Preview Issues
+
+✍️
+
+## Form Builder
+
+### ✍️ Multi-Step Forms
 
 ✍️
 
 ## Development
 
-### ✍️ Revamped Watch Command Output 
+### ✍️ Revamped Watch Command Output
 
 ✍️
