feat: create 5.37.5 release notes

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -26,9 +26,15 @@ Upon assigning a user to a folder, the folder owner can also define the level of
 - **Editor** - users can view and modify content
 - **Owner** - users can edit and manage content permissions
 
-We believe that this feature will be especially useful for larger organizations that have a lot of content and a lot of users, and that need to have an even more granular control over who can access what content.
+Once defined, the access permissions are inherited by all subfolders and content within the folder. This means that if a user has access to a folder, they will also have access to all subfolders and content within that folder.
 
-[//]: # (To learn more, please refer to the newly added [Folder Level Permissions]&#40;/docs/key-topics/security/folder-level-permissions&#41; article.)
+Ultimately, we believe that this feature will be especially useful for larger organizations that have a lot of content and a lot of users, and that need to have an even more granular control over who can access what content.
+
+To learn more, please refer to the newly added [Folder Level Permissions](/docs/key-topics/security/folder-level-permissions) article.
+
+### ✍️ Audit Logs
+
+✍️
 
 ## Page Builder
 
