chore: add warnings about permissions

--- a/src/docs/5.28.x/infrastructure/aws/configure-aws-credentials.mdx
+++ b/src/docs/5.28.x/infrastructure/aws/configure-aws-credentials.mdx
@@ -4,6 +4,7 @@ description: How to configure your AWS credentials for programmatic access
 ---
 
 import { Alert } from "@/components/Alert";
+import { ExternalLink } from "@/components/ExternalLink";
 import YouTube from "@/components/YouTube";
 
 <Alert type="success" title="What you’ll learn">
@@ -110,17 +111,12 @@ In order to deploy your Webiny project in a more controlled and secure manner, y
 To get started, simply click [here](https://console.aws.amazon.com/cloudformation/home?#/stacks/create/review?templateURL=https://webiny-public.s3.us-east-2.amazonaws.com/cloudformation/DEPLOY_WEBINY_PROJECT_CF_TEMPLATE.yaml&stackName=DeployWebinyProject).
 
 <Alert type={"info"}>
-  Before deploying the AWS CloudFormation template, you might want to inspect it. You can do that by
-  visiting our{" "}
-  <a
-    target="_blank1"
-    href={
-      "https://github.com/webiny/webiny-js/blob/stable/docs/DEPLOY_WEBINY_PROJECT_CF_TEMPLATE.yaml"
-    }
-  >
-    GitHub repository
-  </a>
-  .
+
+Before deploying the AWS CloudFormation template, you might want to inspect it. You can do that by
+visiting our <ExternalLink href={"https://github.com/webiny/webiny-js/blob/stable/docs/DEPLOY_WEBINY_PROJECT_CF_TEMPLATE.yaml"}>
+  GitHub repository
+</ExternalLink> or <ExternalLink href={"https://webiny-public.s3.us-east-2.amazonaws.com/cloudformation/DEPLOY_WEBINY_PROJECT_CF_TEMPLATE.yaml"}>downloading the template from our S3 bucket</ExternalLink>.
+  
 </Alert>
 
 [//]: # "Commented out as the provided info and screenshots are outdated."
