--- a/src/docs/5.37.x/admin-area/extending/cognito-federation.mdx
+++ b/src/docs/5.37.x/admin-area/extending/cognito-federation.mdx
@@ -36,6 +36,12 @@ Custom `OIDC` providers are not supported at this point.
 
 In this article, we're using Google as the identity provider of choice. To set up a Google Cloud project and obtain the `client_id` and `client_secret`, [follow the official documentation](https://docs.aws.amazon.com/cognito/latest/developerguide/cognito-user-pools-social-idp.html). In particular, see the **To register an app with Google** section.
 
+<Alert type="warning" title={"Update Your AWS Permissions!"}>
+
+If your project was created before _v5.37.6_, and you used our [AWS Cloudformation template](https://webiny-public.s3.us-east-2.amazonaws.com/cloudformation/DEPLOY_WEBINY_PROJECT_CF_TEMPLATE.yaml) to setup your deployment user, make sure you update the permissions using the template.
+
+</Alert>
+
 ## Configure AWS Infrastructure
 
 Cognito resources are part of the Core app, which is responsible for stateful resources (databases, user pools, S3 buckets, etc.). To configure Cognito to use federated identity providers, we need to modify the `webiny.application.ts` file of the `core` app. Webiny provides a utility to facilitate the configuration of infrastructure resources involved.
