--- a/src/docs/shared/release-notes/5.37.6/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.6/changelog.mdx
@@ -14,7 +14,16 @@ import cognitoFederation from "./assets/cognito-federation.png";
 
 With this release, we've enabled developers to configure federated identity providers on the Cognito setup used for Admin app login. We now support logging in via the following public identity providers: Google, Facebook, Amazon, and Apple. Custom OIDC providers are not yet supported.
 
-<Image src={cognitoFederation} title={"Using Federated IdPs to Sign Into the Admin App"}/>
+<Image src={cognitoFederation} title={"Using Federated IdPs to Sign Into the Admin App"} />
+
+<Alert type="warning" title={"Update Your AWS Permissions"}>
+
+If you plan to use this feature, and you used our Cloudformation template to setup your deployment
+user, make sure you update the IAM permissions. [The CF
+template](https://webiny-public.s3.us-east-2.amazonaws.com/cloudformation/DEPLOY_WEBINY_PROJECT_CF_TEMPLATE.yaml)
+was updated with the permissions to manage user pool domains and identity providers.
+
+</Alert>
 
 ## Lexical Editor
 
