chore: fix formatting

--- a/src/docs/5.37.x/admin-area/extending/cognito-federation.mdx
+++ b/src/docs/5.37.x/admin-area/extending/cognito-federation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Cognito Federation
-description: Learn how to configure Cognito Federation to sign into the Admin area.
+description: Learn how to configure Cognito Federation to sign into the Admin app.
 ---
 
 import { CanIUseThis } from "@/components/CanIUseThis";
