--- a/src/docs/5.37.x/admin-area/extending/graphql-request-batching.mdx
+++ b/src/docs/5.37.x/admin-area/extending/graphql-request-batching.mdx
@@ -1,6 +1,6 @@
 ---
 title: GraphQL Request Batching
-description: Learn how to configure the GraphQL client request batching
+description: Learn how to configure the GraphQL client request batching in the Admin app.
 ---
 
 import { CanIUseThis } from "@/components/CanIUseThis";
