wip: create 5.38.0 release notes

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -53,14 +53,21 @@ So, with this release, we've changed the way blocks are previewed. Now, instead 
 
 ## Form Builder
 
-### ✍️ Multi-Step Forms
+### Multi-Step Forms
 
-✍️
+With this release, we're introducing support for multi-step forms in the Form Builder app.
 
 <Image src={multiStepForms} alt={"Multi-step Forms"} />
 
-## Deployments
+As the name suggests, multi-step forms allow users to break down long forms into multiple steps. This way, users can create more complex forms, while still keeping them simple and easy to fill out. 
 
+In terms of backward compatibility, note that, upon redeploying your Webiny project, a data migration will be triggered, which will automatically convert all existing forms into multi-step forms. In essence, in this process, all form fields from existing forms will be moved into the first step of the form. 
+
+In terms of manual steps, note that you will still need to update your form layout React components, which will partially be handled by the project upgrade script that's included in this release.
+
+For more information, please refer to the newly added [Multi-Step Forms](/docs/key-topics/form-builder/multi-step-forms) article.
+
+## Deployments
 
 ### Introducing Support for Amazon OpenSearch ([#3612](https://github.com/webiny/webiny-js/pull/3612))
 
