--- a/src/docs/5.36.x/infrastructure/basics/modify-cloud-infrastructure.mdx
+++ b/src/docs/5.36.x/infrastructure/basics/modify-cloud-infrastructure.mdx
@@ -320,7 +320,7 @@ import { createApiApp } from "@webiny/serverless-cms-aws";
 // Here we're listing all environments that will use the shared ElasticSearch domain.
 const ENVIRONMENTS_USING_SHARED_ES_DOMAIN = ["dev", "other-dev"];
 
-export default createCoreApp({
+export default createApiApp({
     pulumiResourceNamePrefix: "wby-",
     elasticSearch: ({ params }) => {
         const { env } = params.run;
