fix: remove -ing form

--- a/src/docs/5.38.x/headless-cms/extending/customize-entry-list-bulk-actions.mdx
+++ b/src/docs/5.38.x/headless-cms/extending/customize-entry-list-bulk-actions.mdx
@@ -53,7 +53,7 @@ export const App: React.FC = () => {
 };
 ```
 
-`Browser` is the crucial component of the admin app's Content Entry List. This is where users can easily browse through entries, apply filters, perform searches, create new entries, and organize them into folders. 
+`Browser` is the crucial component of the Admin app's Content Entry List. This is where users can easily browse through entries, apply filters, perform searches, create new entries, and organize them into folders. 
 
 If users select one or more entries from the list, the bulk action bar will appear.
 
@@ -61,7 +61,7 @@ If users select one or more entries from the list, the bulk action bar will appe
 
 ## Add a Bulk Action
 
-To add a new bulk action, use the `ContentEntryListConfig` component and mount it within your `Admin` app. This component will serve as the foundation for your bulk actions.
+To add a new bulk action, use the `ContentEntryListConfig` component and mount it within your Admin app. This component will serve as the foundation for your bulk actions.
 
 To ensure UI consistency, use the `useButtons` hook to access four button components:
 
@@ -248,7 +248,7 @@ By declaring the `modelIds` prop, you can define in which Content Model Entry Li
 
 <Image src={hcmsBulkActionsAsync} title="Asyncronous Bulk Action" />
 
-## Discovering Bulk Actions
+## Discover Bulk Actions
 
 This section demonstrates how you can discover the names of existing bulk actions. This is important for further sections on positioning, removing, and replacing bulk actions.
 
@@ -256,7 +256,7 @@ The easiest way to discover existing bulk actions is to use your browser's React
 
 <Image src={hcmsBulkActionsDiscover} title="Discover Existing Bulk Actions" />
 
-## Positioning a Bulk Action
+## Position a Bulk Action
 
 To position your custom bulk action before or after an existing action, you can use the `before` and `after` props on the `<Browser.BulkAction>` element:
 
@@ -268,7 +268,7 @@ To position your custom bulk action before or after an existing action, you can 
 
 <Image src={hcmsBulkActionsPosition} title="Position Your Action Before Another Action" />
 
-## Removing a Bulk Action
+## Remove a Bulk Action
 
 Sometimes you might want to remove an existing bulk action. All you need to do is reference the action by name and pass a `remove` prop to the `<Browser.BulkAction>` element:
 
@@ -278,7 +278,7 @@ Sometimes you might want to remove an existing bulk action. All you need to do i
 </ContentEntryListConfig>
 ```
 
-## Replacing a Bulk Action
+## Replace a Bulk Action
 
 To replace an existing bulk action with a new action element, you need to reference an existing action by name and pass a new component via the `element` prop:
 
