feat: add PB bulk actions article

--- a/src/docs/5.38.x/file-manager/extending/customize-file-bulk-actions.mdx
+++ b/src/docs/5.38.x/file-manager/extending/customize-file-bulk-actions.mdx
@@ -27,7 +27,7 @@ This feature is available since Webiny **v5.38.0**.
 
 ## Overview
 
-In File Manager, pre-built actions empower users to modify status, delete, or move multiple files effortlessly. These actions become visible when you select one or more files from the list.
+In File Manager, pre-built actions empower users to delete, or move multiple files effortlessly. These actions become visible when you select one or more files from the list.
 
 To work with bulk actions, you need to use the `FileManagerViewConfig` component. For this article, we will use the `BulkAction` in the `Browser` namespace.
 
