chore: update changelog

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -4,10 +4,15 @@ title: Webiny 5.38.0 Changelog
 description: See what's new in Webiny version 5.38.0.
 ---
 
+import { Gallery } from "@/components/Image";
 import flp from "./assets/flp.png";
 import watchCmd from "./assets/watch-cmd.png";
 import blockPreview from "./assets/blocks-preview.png";
 import multiStepForms from "./assets/multi-step-forms.png";
+import nestedFields from "./assets/nested-fields.png";
+import lexicalFlat from "./assets/lexical-flat.png";
+import lexicalCustomTransform from "./assets/lexical-custom-transform.png";
+import lexicalToHtml from "./assets/lexical-to-html.png";
 
 <GithubRelease version={"5.38.0"} />
 
@@ -35,6 +40,20 @@ We believe that this feature will be especially useful for teams that are workin
 
 To learn more, please refer to the newly added [Folder Level Permissions](/docs/key-topics/security/folder-level-permissions) article.
 
+## Headless CMS
+
+### Support for Nested Dynamic Zones, Objects, and Ref Fields ([#3471](https://github.com/webiny/webiny-js/pull/3471))
+
+Up until now, the Dynamic Zone field had a few very important limitations: it could only be used as a top-level field, it did not support nesting, and it did not support `ref` fields. With this release, things change! 😎
+
+We now support nesting of any field, at any depth, without any **structural** limitations. Dynamic zones can also be nested within each other, meaning your dynamic templates are now as powerful as they get.
+
+<Image src={nestedFields} alt={"Nesting of Dynamic Zones, Objects and Ref Fields"} />
+
+However, there are still limitations on filtering: _you cannot filter content entries based on the fields within the dynamic zone templates_.
+
+Still, this unlocks near limitless data modeling, and can be an indispensable tool when combined with a site generator like Gatsby or Next.js, where your entire dynamic zone templates can be mapped to React components designed to render your content.
+
 ### ✍️ Audit Logs
 
 ✍️
@@ -45,11 +64,11 @@ To learn more, please refer to the newly added [Folder Level Permissions](/docs/
 
 We've improved the way blocks are previewed in the Page Builder app. Previously, whenever a block was saved, a preview image was generated and stored in the database. This image was then used to display the block preview in the Page Builder app.
 
-However, this approach had a few drawbacks, the most important one being that the preview image was not always up-to-date with the actual block content. 
+However, this approach had a few drawbacks, the most important one being that the preview image was not always up-to-date with the actual block content.
 
 So, with this release, we've changed the way blocks are previewed. Now, instead of generating and storing a preview image, we're using the actual block content to display the preview. This way, the preview is always up-to-date with the actual block content.
 
-<Image src={blockPreview} alt={"Improved Previewing of Blocks"}/>
+<Image src={blockPreview} alt={"Improved Previewing of Blocks"} />
 
 ## Form Builder
 
@@ -59,9 +78,9 @@ With this release, we're introducing support for multi-step forms in the Form Bu
 
 <Image src={multiStepForms} alt={"Multi-step Forms"} />
 
-As the name suggests, multi-step forms allow users to break down long forms into multiple steps. This way, users can create more complex forms, while still keeping them simple and easy to fill out. 
+As the name suggests, multi-step forms allow users to break down long forms into multiple steps. This way, users can create more complex forms, while still keeping them simple and easy to fill out.
 
-In terms of backward compatibility, note that, upon redeploying your Webiny project, a data migration will be triggered, which will automatically convert all existing forms into multi-step forms. In essence, in this process, all form fields from existing forms will be moved into the first step of the form. 
+In terms of backward compatibility, note that, upon redeploying your Webiny project, a data migration will be triggered, which will automatically convert all existing forms into multi-step forms. In essence, in this process, all form fields from existing forms will be moved into the first step of the form.
 
 In terms of manual steps, note that you will still need to update your form layout React components, which will partially be handled by the project upgrade script that's included in this release.
 
@@ -79,6 +98,29 @@ Note that all existing projects that are using the Amazon DynamoDB + Amazon Elas
 
 Note that, at the moment, we do not provide a migration path from Amazon Elasticsearch to Amazon OpenSearch for existing projects. Drop us a message in our [Community Slack](https://www.webiny.com/slack) if this is something you'd like to see in the future.
 
+## Lexical Tooling
+
+### Lexical Parser and Converter ([#3626](https://github.com/webiny/webiny-js/pull/3626))
+
+We've developed some useful tools to help you work with the Lexical editor, which we use in the Page Builder and Headless CMS.
+
+Often, you need to import or export data to and from Webiny, but you only have, or need, HTML at your disposal. To help you convert HTML to Lexical, or Lexical to HTML, we've introduced a package `@webiny/lexical-converter`, to facilitate the process. It contains utilities to help you with bidirectional conversion of Lexical data.
+
+<Gallery>
+  <Image
+    src={lexicalFlat}
+    alt={`The "flatten" utility produces an array of objects containing the Lexical node and its HTML representation.`}
+  />
+  <Image
+    src={lexicalCustomTransform}
+    alt={"Example of processing the flattened output to further shape your data."}
+  />
+  <Image
+    src={lexicalToHtml}
+    alt={`The "toHtml" utility converts Lexical data into a single HTML string.`}
+  />
+</Gallery>
+
 ## Development
 
 ### Revamped Watch Command Output
@@ -87,6 +129,6 @@ We've revamped the output for the [`webiny watch`](/docs/{version}/core-developm
 
 <Image src={watchCmd} alt={"Revamped Watch Command Output"} />
 
-When compared to the previous, the new output is much more compact and easier to read. Instead of using three panes to display the build, deploy, and application runtime logs, the command is now printing all logs directly into the terminal. 
+When compared to the previous, the new output is much more compact and easier to read. Instead of using three panes to display the build, deploy, and application runtime logs, the command is now printing all logs directly into the terminal.
 
 Furthermore, the deployment logs have been simplified, only showing basic information about the deployment process. Only in case of an error, the full deployment logs will be printed to the user.
